samples/_failures_safe/1761435261_4ab14b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51a513b4.c: In function ‘main’:
./samples/SAFE/__tmp_51a513b4.c:147:16: error: missing terminating " character
  147 |         printf("Error: Data mismatch
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_51a513b4.c:147:9: error: expected expression at end of input
  147 |         printf("Error: Data mismatch
      |         ^~~~~~
./samples/SAFE/__tmp_51a513b4.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_51a513b4.c:147:9: error: expected declaration or statement at end of input
